--- a/src/styles.css
+++ b/src/styles.css
@@ -12,6 +12,7 @@
   max-width: 1440px;
   /* height: auto; */
   margin: 0 auto;
+  padding: 0 10px;
 }
 
 .center-slider {
